# rustr

./: .gitignore  .travis.yml  Cargo.toml  README.md  README.old.md  appveyor.yml  build.rs  test_scripts.md
examples/: engine.rs  error.rs  init.rs  vector.rs
rtest/: .Rbuildignore  DESCRIPTION  NAMESPACE  rtest.Rproj
rtest/R/: REXPORT.R  hi.R  zzz.r
rtest/src/: Makevars  Makevars.win  REXPORT.c
rtest/src/rustlib/: Cargo.toml
rtest/src/rustlib/src/: export.rs  lib.rs  nalg.rs  robj.rs
rtest/tests/: testthat.R
rtest/tests/testthat/: test-dll.r  test-message.r  test-nalgebra.R  test-robj.r
src/: caster.rs  complex.rs  dotpair.rs  environment.rs  error.rs  eval.rs  formula.rs  grow.rs  lcons.rs  lib.rs  macros.rs  name_object.rs  promise.rs  rchar.rs  reference.rs  result.rs  rfunction.rs  rlang.rs  rmath.rs  robject.rs  rptr.rs  rstatic.rs  rtype.rs  rweak.rs  s4.rs  storage.rs  symbol.rs  util.rs
src/dll/: message.rs  mod.rs
src/feature/: date.rs  datetime.rs  engine.rs  log.rs  random.rs
src/impls/: mod.rs
src/protect/: countp.rs  indexp.rs  mod.rs  stackp.rs
src/rcast/: mod.rs
src/rdll/: mod.rs  unix32.rs  unix64.rs  win32.rs  win64.rs
src/rwrap/: mod.rs
src/traits/: attr.rs  dim.rs  intor.rs  mod.rs  name.rs  rfield.rs  rlist.rs  slot.rs
src/types/: nalgebra.rs
src/types/nalgebra/: mat.rs  mod.rs  vec.rs
src/types/num/: mod.rs
src/vector/: boolvec.rs  cplvec.rs  intvec.rs  mod.rs  numvec.rs  rawvec.rs
src/vectorx/: charvec.rs  exprvec.rs  list.rs  mod.rs
tests/: lib.rs  libtests-engine.rs
